word2vec model building

--- a/NLP_Model/amazon_review_sentiment_analysis_with_word2vec.ipynb
+++ b/NLP_Model/amazon_review_sentiment_analysis_with_word2vec.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
        "['1.py', 'amazon_reviews.csv', 'IMDB_Dataset.xlsx']"
       ]
      },
-     "execution_count": 330,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,8 +43,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 1: Reading Dataset"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +180,7 @@
        "3                   0.0                 0.0  "
       ]
      },
-     "execution_count": 331,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +201,7 @@
        "(4915, 12)"
       ]
      },
-     "execution_count": 332,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +233,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 333,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +412,7 @@
        "max              0.957544  "
       ]
      },
-     "execution_count": 334,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +444,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 335,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,12 +457,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 1. Removing null values from dataframe"
+    "## Step 2. Removing null values from dataframe"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +471,7 @@
        "(4915, 12)"
       ]
      },
-     "execution_count": 336,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +500,7 @@
        "(4913, 12)"
       ]
      },
-     "execution_count": 338,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,12 +513,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 2. Remove Unwanted features"
+    "## Step 3. Remove Unwanted features"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +642,7 @@
        "3              0.852525            0.818577  "
       ]
      },
-     "execution_count": 339,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -649,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +671,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 340,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -675,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -739,7 +746,7 @@
        "2            0.912139  "
       ]
      },
-     "execution_count": 341,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -751,11 +758,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "# python -m spacy download en_core_web_sm\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 4: Pre Process (Removing Noise Data)"
    ]
   },
   {
@@ -772,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -814,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -823,7 +837,7 @@
        "'!\"#$%&\\'()*+,-./:;<=>?@[\\\\]^_`{|}~'"
       ]
      },
-     "execution_count": 344,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -834,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -849,7 +863,7 @@
        " 'patient']"
       ]
      },
-     "execution_count": 345,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -867,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -879,7 +893,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 346,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1090,6 +1104,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Step 5: Initialize Word2Vec Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Pre Processing is completed, now its time to create Vector \n",
     "### In this case, we use word2vec model for creating embedding.\n"
    ]
@@ -1179,7 +1200,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create Sentence Vector"
+    "## Step 6: Create Sentence Vector"
    ]
   },
   {
@@ -1229,7 +1250,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Split into Train and Test Data"
+    "## Step 7: Split into Train and Test Data"
    ]
   },
   {
@@ -1265,7 +1286,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Now Initialize and Build ML Model for Prediction"
+    "## Step 8: Now Initialize and Build ML Model for Prediction"
    ]
   },
   {
@@ -1756,7 +1777,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Combining all Classifier Models at One go and check accuracy for each one"
+    "## Step 9: Combining all Classifier Models at One go and check accuracy for each one"
    ]
   },
   {
