--- a/Embedding_Techniques/tfdif_encoding.ipynb
+++ b/Embedding_Techniques/tfdif_encoding.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
        "\twith 11 stored elements in Compressed Sparse Row format>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
        "array([[0.        , 0.49681612, 0.        , 0.61366674, 0.61366674]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
        "array(['comment', 'cricket', 'give', 'people', 'watch'], dtype=object)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
        "{'people': 3, 'watch': 4, 'cricket': 1, 'give': 2, 'comment': 0}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
        "array([1.51082562, 1.22314355, 1.51082562, 1.51082562, 1.51082562])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -153,13 +153,58 @@
        " 'vocabulary': None}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "tfdif.get_params()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.5108256237659907"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# get score for each word\n",
+    "index = tfdif.vocabulary_.get('people')\n",
+    "tfdif.idf_[index]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tfdif score is 1.5108256237659907  for word  comment\n",
+      "tfdif score is 1.2231435513142097  for word  cricket\n",
+      "tfdif score is 1.5108256237659907  for word  give\n",
+      "tfdif score is 1.5108256237659907  for word  people\n",
+      "tfdif score is 1.5108256237659907  for word  watch\n"
+     ]
+    }
+   ],
+   "source": [
+    "for feature in tfdif.get_feature_names_out():\n",
+    "    index = tfdif.vocabulary_.get(feature)\n",
+    "    print('tfdif score is', tfdif.idf_[index] ,' for word ',feature)"
    ]
   },
   {
